name:                unhex
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Andrey Kartashov
maintainer:          andrey.kartashov@gmail.com
-- copyright:
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable unhex
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , bytestring
                     , base16-bytestring

  -- hs-source-dirs:
  default-language:    Haskell2010

  ghc-options: -Wall -O2
